<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <EditText
        android:id="@+id/et_name"
        android:padding="15sp"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_age"
        android:padding="15sp"
        android:hint="@string/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_add"
        android:text="@string/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
