<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ContentTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/layout_weight_30"
            android:text="@string/display_name" />

        <TextView
            android:id="@+id/tv_student_name"
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/layout_weight_70" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ContentTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/layout_weight_30"
            android:text="@string/display_age" />

        <TextView
            android:id="@+id/tv_student_age"
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/layout_weight_70" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/chb_present"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/present_today" />

    <View style="@style/ItemSeperator" />

</LinearLayout>
